--- a/web/index.html
+++ b/web/index.html
@@ -34,7 +34,7 @@
             fetch('https://api.github.com/repos/yourusername/yourrepo/actions/workflows/build.yml/dispatches', {
                 method: 'POST',
                 headers: {
-                    'Authorization': 'Bearer YOUR_GITHUB_TOKEN',
+                    'Authorization': 'Bearer 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',
                     'Content-Type': 'application/json'
                 },
                 body: JSON.stringify({
